Start to translate python intro

--- a/Intro-Python/Intro-Python.ipynb
+++ b/Intro-Python/Intro-Python.ipynb
@@ -7,15 +7,7 @@
     "# An introduction to Python\n",
     "\n",
     "    Joseph Salmon: joseph.salmon@umontpellier.fr\n",
-    "    Benjamin Charlier: benjamin.charlier@umontpellier.fr\n",
-    "\n",
-    "## References\n",
-    "\n",
-    "Inspired from the work of:\n",
-    "\n",
-    "- A. Gramfort (alexandre.gramfort@inria.fr) http://alexandre.gramfort.net/\n",
-    "- J. R. Johansson (robert@riken.jp) http://dml.riken.jp/~rob/\n",
-    "- P. Fuchs et P. Poulain https://python.sdv.univ-paris-diderot.fr/\n"
+    "    Benjamin Charlier: benjamin.charlier@umontpellier.fr\n"
    ]
   },
   {
@@ -734,7 +726,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Operateurs et comparaisons"
+    "## Operators and comparisons"
    ]
   },
   {
@@ -771,7 +763,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Attention ** et pas ^ comme dans d'autres langages\n",
+    "# Warning **, not  ^ as in some other languages\n",
     "2 ** 2"
    ]
   },
@@ -779,7 +771,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Opérations booléennes en anglais `and`, `not`, `or`. "
+    "* Boolean operators: `and`, `not`, `or`. "
    ]
   },
   {
@@ -813,7 +805,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Comparisons `>`, `<`, `>=` (plus grand ou égal), `<=` (inférieur ou égal), `==` equalité, `is` identique."
+    "* Comparisons `>`, `<`, `>=` greater or equal, `<=` less or equal, `==` equal (content are the same), `is` object identity."
    ]
   },
   {
@@ -849,7 +841,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "2 != 3  # différent de"
+    "2 != 3  # not equal"
    ]
   },
   {
@@ -858,16 +850,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "not 2 == 3  # négation"
+    "not 2 == 3  # negation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2 is not None"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conteneurs: Chaînes de caractères, listes et dictionnaires\n",
+    "## Containers\n",
     "\n",
-    "### Chaines de caractères (Strings)"
+    "### Strings"
    ]
   },
   {
@@ -906,9 +907,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Attention:** les indices commencent à 0!\n",
+    "**Beware:** indices starts at 0!\n",
     "\n",
-    "On peut extraire une sous-chaine avec la syntaxe `[start:stop]`, qui extrait les caractères entre `start`  (**inclus**) et `stop` (**exclu**) :"
+    "To extract a sub-string between indices `start`  (**included**) `stop` (**excluded**): use the syntax `[start:stop]`"
    ]
   },
   {
@@ -917,7 +918,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s[0]  # premier élément"
+    "s[0]  # first char"
    ]
   },
   {
@@ -926,7 +927,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s[-1]  # dernier élément"
+    "s[-1]  # last char"
    ]
   },
   {
@@ -972,16 +973,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pour la curiosité: les chaînes de caractères sont \"compliquées\", surtout pour les langues, comme le français, qui ont des accents, cédilles, etc.\n",
-    "\n",
-    "Voir: unicode et utf8, etc. http://sametmax.com/lencoding-en-python-une-bonne-fois-pour-toute/ pour"
+    "**Remark:** especially for french word (containing é,è, à, ç ...), you should check which character encoding system is used. See: unicode, utf8, etc... at http://sametmax.com/lencoding-en-python-une-bonne-fois-pour-toute/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On peut omettre `start` ou `stop`. Dans ce cas les valeurs par défaut sont respectivement 0 et la fin de la chaine."
+    "It is possible to omit `start` or `stop`: in this case the default values are 0 or the length of the string respectively."
    ]
   },
   {
@@ -990,7 +989,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s[:5]  # 5 premières valeurs"
+    "s[:5]  # 5 first chars"
    ]
   },
   {
@@ -999,7 +998,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s[2:]  # de l'entrée d'indice 6 à la fin"
+    "s[2:]  # from the third char to the end of the string"
    ]
   },
   {
@@ -1008,7 +1007,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(len(s[5:]))  # en anglais length = longeur\n",
+    "print(len(s[5:]))  # len means 'length'\n",
     "print(len(s) - 5)"
    ]
   },
@@ -1018,14 +1017,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s[-3:]  # les 6 derniers"
+    "s[-3:]  # 3 last chars"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il est aussi possible de définir le `step` (pas d'avancement) avec la syntaxe `[start:stop:step]` (la valeur par défaut de `step` est 1):"
+    "It is possible to define a `step` with the syntax `[start:stop:step]` (default value of `step` is 1):"
    ]
   },
   {
@@ -1042,7 +1041,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cette technique est appelée *slicing*. Pour en savoir plus: https://docs.python.org/3/library/functions.html?highlight=slice#slice et https://docs.python.org/3/library/string.html"
+    "This is called *slicing*. See: https://docs.python.org/3/library/functions.html?highlight=slice#slice et https://docs.python.org/3/library/string.html"
    ]
   },
   {
@@ -1050,7 +1049,7 @@
    "metadata": {},
    "source": [
     "### <font color='red'>EXERCISE : slicing and strings</font>\n",
-    "A partir des lettres de l'alphabet, générer par une operation de slicing la chaîne de charactère *cfilorux*"
+    "From the alphabet, use slicing to generate the string \"cfilorux\""
    ]
   },
   {
@@ -1077,7 +1076,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Certains opérateurs ont été surchargés pour manipuler des strings."
+    "Some operators may be used to handle strings (this is called overloading)."
    ]
   },
   {
@@ -3118,7 +3117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.6"
   },
   "toc": {
    "base_numbering": 1,
